@@ -940,11 +940,12 @@
   </module>
 
   <module id="gnome-keyring">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
 
   <module id="gnome-keyring-manager">
