@@ -612,7 +612,7 @@
       <module id="gnome-doc-utils"/>
       <module id="gnome-games" branch="gnome-2-22"/>
       <module id="gnome-icon-theme" branch="gnome-2-22"/>
-      <module id="gnome-keyring"/>
+      <module id="gnome-keyring" branch="gnome-2-22"/>
       <module id="gnome-mag"/>
       <module id="gnome-media" branch="gnome-2-22"/>
       <module id="gnome-menus" branch="gnome-2-22"/>
