@@ -1,3 +1,9 @@
+2008-06-29  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	gnome-keyring branched for gnome-2-22.
+
 2008-06-27  Johannes Schmid  <jhs@gnome.org>
 
 	* gnome-modules.xml.in:
